--- a/VentasSMS/VentasSMS/VentasSMS.csproj
+++ b/VentasSMS/VentasSMS/VentasSMS.csproj
@@ -64,6 +64,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduleConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScheduleConfig.Designer.cs">
+      <DependentUpon>ScheduleConfig.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmConfig.resx">
       <DependentUpon>frmConfig.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +85,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ScheduleConfig.resx">
+      <DependentUpon>ScheduleConfig.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
