--- a/trunk/VentasSMS/VentasSMS/App.config
+++ b/trunk/VentasSMS/VentasSMS/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="smsWorkbook" value="~\SMS_Ventas.xlsx"/>
+    <add key="smsSender" value="#\inspiracode\SMSVentas\SMSSender.exe"/>
   </appSettings>
 </configuration>
