--- a/VentasSMS/VentasSMS/App.config
+++ b/VentasSMS/VentasSMS/App.config
@@ -2,6 +2,22 @@
 <configuration>
   <appSettings>
     <add key="smsWorkbook" value="~\SMS_Ventas.xlsx"/>
-    <add key="smsSender" value="#\inspiracode\SMSVentas\SMSSender.exe"/>
+    <add key="todSchedule" value="08:00;16:00"/>
+    <add key="monSchedule" value="true"/>
+    <add key="tueSchedule" value="true"/>
+    <add key="wedSchedule" value="true"/>
+    <add key="thuSchedule" value="true"/>
+    <add key="friSchedule" value="true"/>
+    <add key="satSchedule" value="true"/>
+    <add key="sunSchedule" value="false"/>
+    <add key="user" value="a.user"/>
+    <add key="password" value="secret"/>
+    <add key="monExecuted" value=""/>
+    <add key="tueExecuted" value=""/>
+    <add key="wedExecuted" value=""/>
+    <add key="thuExecuted" value=""/>
+    <add key="friExecuted" value=""/>
+    <add key="satExecuted" value=""/>
+    <add key="sunExecuted" value=""/>
   </appSettings>
 </configuration>
