ValidateConfiguration before RetrieveSales. Adding ConfigValidator for common validation operations.

--- a/VentasSMS/VentasSMS/VentasSMS.csproj
+++ b/VentasSMS/VentasSMS/VentasSMS.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonConstants.cs" />
+    <Compile Include="ConfigValidator.cs" />
     <Compile Include="frmConfig.cs">
       <SubType>Form</SubType>
     </Compile>
