--- a/trunk/VentasSMS/VentasSMS/VentasSMS.csproj
+++ b/trunk/VentasSMS/VentasSMS/VentasSMS.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonConstants.cs" />
+    <Compile Include="ConfigValidator.cs" />
     <Compile Include="frmConfig.cs">
       <SubType>Form</SubType>
     </Compile>
