--- a/trunk/VentasSMS/VentasSMS/VentasSMS.csproj
+++ b/trunk/VentasSMS/VentasSMS/VentasSMS.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auditoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Auditoria.Designer.cs">
+      <DependentUpon>Auditoria.cs</DependentUpon>
+    </Compile>
     <Compile Include="CommonConstants.cs" />
     <Compile Include="ConfigValidator.cs" />
     <Compile Include="frmConfig.cs">
@@ -71,6 +77,9 @@
     <Compile Include="ScheduleConfig.Designer.cs">
       <DependentUpon>ScheduleConfig.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Auditoria.resx">
+      <DependentUpon>Auditoria.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmConfig.resx">
       <DependentUpon>frmConfig.cs</DependentUpon>
     </EmbeddedResource>
