--- a/trunk/VentasSMS/SMSSender/SMSSender.csproj
+++ b/trunk/VentasSMS/SMSSender/SMSSender.csproj
@@ -52,6 +52,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Npgsql">
+      <HintPath>..\..\..\..\..\Users\Alfredo\Downloads\Npgsql-2.1.3-net35\Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -62,6 +65,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonConstants.cs" />
+    <Compile Include="ConnectionManager.cs" />
+    <Compile Include="DAO\DirectorDAO.cs" />
+    <Compile Include="DAO\EnterpriseDAO.cs" />
+    <Compile Include="DAO\SellerDAO.cs" />
+    <Compile Include="Entities\Director.cs" />
+    <Compile Include="Entities\Enterprise.cs" />
+    <Compile Include="Entities\Seller.cs" />
+    <Compile Include="SalesPickerPostgresql.cs" />
     <Compile Include="ISendable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -125,6 +136,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
